1.2.4 Aug 13th 2010
        - Update FIPS codes 20100810 ( Boris Zentner )
        - Simplify init code in class LookupServices ( Boris Zentner )
        - Big timezone update ( Boris Zentner )
        - Update FIPS codes 20100530 ( Boris Zentner )
        - Update FIPS codes 20100510 ( Boris Zentner )
        - Add IPv6 support via getCountryV6 ( Boris Zentner )
        - Add exmaple for IPv6 lookups: CountryLookupTestV6 ( Boris Zentner )
        - Fix DatabaseInfo string ( Boris Zentner ) 
        - Add netmask and last_netmask methods ( Boris Zentner )
        - Remove static keyword from objects that are reinitialized in the init() method. ( Tony Jacobs )
        - Replace nearly all calls to file.read() with file.readFully() ( Tony Jacobs )
        - Synchronized 100% of the calls to file ( Tony Jacobs )
        - Use Integer.valueOf() instead of new Integer() to reduce memory consumption. ( Tony Jacobs )
        - Use explicit imports instead of import java.io.*; and the like. ( Tony Jacobs )
        - Fix array length in distributed service setup ( quarz12h )
        - Sync with recent FIPS codes 20090723 ( Boris Zentner )
1.2.3  May 11th 2009 
        - Sync with recent FIPS codes 20090511 ( Boris Zentner )
        - Fixed spelling of Kazakhstan, was Kazakstan ( Boris Zentner )	
        - Fix rare out of range error, when the last entry of the Org/ISP/Domain database is copied ( MEMORY_CACHE only ). ( Boris Zentner )
	- Update timezones for Australia
	- Remore "\n" from RegionLookupTest.java. println add already a newline ( Boris Zentner )
	- Change regionName.java and generate_regionName.pl to support FIPS codes with letters ( Boris Zentner ). 
	- Sync with recent FIPS codes Jan 14th, 2009 ( Boris Zentner )
	- remove dma_code from city records. use  metro_code instead. ( Boris Zentner )
1.2.2  March 22nd 2008
	- Added BL/Saint Barthelemy, MF/Saint Martin (ISO-3166-1 additions)
	- Updated timeZone.java ( Boris Zentner )